# python-starter

./: README.md  pyproject.toml
src/python_starter/: main.py
